# cookie_clicker_automation

./: cookie_clicker.py  engine.py  notes.html  pyproject.toml
